--- a/csdwWeb/githubshow/pubspec.yaml
+++ b/csdwWeb/githubshow/pubspec.yaml
@@ -30,16 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  go_router: ^14.3.0
+  fluent_ui: ^4.8.7
+  system_tray: ^2.0.3
+  bitsdojo_window: 0.1.6
+  json_annotation: ^4.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^6.8.0
+  build_runner: 2.4.9
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -59,9 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - asset/image/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -88,3 +91,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+targets:
+  $default:
+    builders:
+      json_serializable:
+        options:
+          # 指定生成代码的配置
+          # 是否要在生成的代码中包含 fromJson 和 toJson 方法的方法签名
+          # 默认情况下，此值为false，设置为true可以生成方法签名，便于调试
+          generate_to_json: true
+          generate_from_json: true
